--- a/.github/workflows/wf_tests.yml
+++ b/.github/workflows/wf_tests.yml
@@ -4,9 +4,8 @@ name: CMake on a single platform
 
 on:
   push:
-    branches: [ $default-branch ]
-  pull_request:
-    branches: [ $default-branch ]
+    branches:
+      - master
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
